--- a/windows-wsl/environment-tf.yml
+++ b/windows-wsl/environment-tf.yml
@@ -3,8 +3,29 @@ channels:
   - defaults
   - conda-forge
   - anaconda
+  - pypi
   - nvidia
 dependencies:
+  - python=3.10.*
+  - pylint
+  - ipython
+  - numpy
   - tensorflow=2.11.*
   - cudatoolkit=11.2.*
   - cudnn=8.1.*
+  - matplotlib
+  - plotly
+  - seaborn
+  - scikit-learn
+  - scikit-learn-intelex
+  - pandas
+  - jupyter
+  - opencv
+  - scipy
+  - pillow
+  - xlrd
+  - lxml
+  - html5lib
+  - beautifulsoup4
+  - jupyterlab
+  
