Get Usage:   pip <command> [options]
Commands:
  install                     Install packages.
  download                    Download packages.
  uninstall                   Uninstall packages.
  freeze                      Output installed packages in requirements format.
  inspect                     Inspect the python environment.
  list                        List installed packages.
  show                        Show information about installed packages.
  check                       Verify installed packages have compatible dependencies.
  config                      Manage local and global configuration.
  search                      Search PyPI for packages.
  cache                       Inspect and manage pip's wheel cache.
  index                       Inspect information available from package indexes.
  wheel                       Build wheels from your requirements.
  hash                        Compute hashes of package archives.
  completion                  A helper command used for command completion.
  debug                       Show information useful for debugging.
  help                        Show help for commands.

General Options:
  -h, --help                  Show help.
  --debug                     Let unhandled exceptions propagate outside the
                              main subroutine, instead of logging them to
                              stderr.
  --isolated                  Run pip in an isolated mode, ignoring
                              environment variables and user configuration.
  --require-virtualenv        Allow pip to only run in a virtual environment;
                              exit with an error otherwise.
  -v, --verbose               Give more output. Option is additive, and can be
                              used up to 3 times.
  -V, --version               Show version and exit.
  -q, --quiet                 Give less output. Option is additive, and can be
                              used up to 3 times (co

--- a/windows-wsl/environment-base-dev.yml
+++ b/windows-wsl/environment-base-dev.yml
@@ -8,15 +8,16 @@ dependencies:
   - python=3.10.*
   - pylint
   - ipython
+  - ipywidgets
   - numpy
   - matplotlib
   - plotly
   - seaborn
+  - seaborn-analyzer
   - scikit-learn
   - scikit-learn-intelex
   - pandas
   - jupyter
-  - opencv
   - scipy
   - pillow
   - xlrd
@@ -24,3 +25,6 @@ dependencies:
   - html5lib
   - beautifulsoup4
   - jupyterlab
+  - pip
+  - pip:
+    - opencv-python==4.7.*
