--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -1,4 +1,4 @@
-name: pytorch
+name: torch
 channels:
   - defaults
   - conda-forge
@@ -9,7 +9,6 @@ channels:
 dependencies:
   - python=3.10.*
   - pylint
-  - ipython
   - numpy
   - pytorch=1.13.*
   - torchvision
@@ -17,18 +16,24 @@ dependencies:
   - torchtext
   - torchdata
   - pytorch-cuda=11.7.*
-  - matplotlib
-  - plotly
-  - seaborn
-  - scikit-learn
-  - scikit-learn-intelex
-  - pandas
-  - jupyter
-  - opencv
-  - scipy
-  - pillow
-  - xlrd
-  - lxml
-  - html5lib
-  - beautifulsoup4
-  - jupyterlab
+  - pip
+  - pip:
+    - ipython
+    - ipywidgets
+    - matplotlib
+    - plotly
+    - seaborn
+    - seaborn-analyzer
+    - scikit-learn
+    - scikit-learn-intelex
+    - pandas
+    - jupyter
+    - jupyterlab
+    - opencv-python==4.7.*
+    - scipy
+    - pillow
+    - xlrd
+    - openpyxl
+    - lxml
+    - html5lib
+    - beautifulsoup4
