--- a/windows-wsl/environment-rapids.yml
+++ b/windows-wsl/environment-rapids.yml
@@ -4,7 +4,7 @@ channels:
   - nvidia
   - rapidsai
 dependencies:
-  - python=3.10
+  - python=3.11.*
   - rapids=23.02
   - cudatoolkit=11.8
   - pylint
