--- a/windows-wsl/environment-rapids.yml
+++ b/windows-wsl/environment-rapids.yml
@@ -5,8 +5,8 @@ channels:
   - rapidsai
 dependencies:
   - python=3.11.*
-  - rapids=23.02
-  - cudatoolkit=11.8
+  - rapids=23.10
+  - cuda-version=12.0
   - pylint
   - category_encoders
   - scikit-learn-intelex
