remove explicit version of opencv

--- a/windows-wsl/spaCy/environment-spacy.yml
+++ b/windows-wsl/spaCy/environment-spacy.yml
@@ -32,7 +32,7 @@ dependencies:
     - pandas
     - jupyter
     - jupyterlab
-    - opencv-python==4.8.*
+    - opencv-python
     - scipy
     - pillow
     - xlrd
