--- a/windows-wsl/spaCy/environment-spacy.yml
+++ b/windows-wsl/spaCy/environment-spacy.yml
@@ -1,13 +1,14 @@
-name: spacy-torch
+name: spacy
 channels:
   - defaults
   - conda-forge
   - anaconda
   - pypi
-  - pytorch
   - nvidia
+  - rapidsai
+  - pytorch
 dependencies:
-  - python=3.10.0
+  - python=3.10
   - pylint
   - numpy
   - pytorch=2.1.0
@@ -15,6 +16,8 @@ dependencies:
   - torchaudio
   - torchtext
   - torchdata
+  - rapids=23.10
+  - cuda-version=12.0
   - pytorch-cuda=12.1
   - category_encoders
   - spacy
@@ -29,7 +32,6 @@ dependencies:
     - plotly
     - seaborn
     - seaborn-analyzer
-    - pandas
     - jupyter
     - jupyterlab
     - opencv-python
@@ -44,4 +46,4 @@ dependencies:
     - autopep8
     - tabulate
     - mlxtend
-    - pyside6==6.5.3
+    - pandas==1.5.3
