--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -7,16 +7,19 @@ channels:
   - pytorch
   - nvidia
 dependencies:
-  - python=3.11.*
+  - python=3.12.*
   - pylint
   - numpy
-  - pytorch=1.13.*
+  - pytorch=2.1.2
   - torchvision
   - torchaudio
   - torchtext
   - torchdata
-  - pytorch-cuda=11.7.*
+  - cuda-version=12.3
+  - pytorch-cuda=12.1
   - category_encoders
+  - scikit-learn
+  - scikit-learn-intelex
   - pip
   - pip:
     - ipython
@@ -25,12 +28,10 @@ dependencies:
     - plotly
     - seaborn
     - seaborn-analyzer
-    - scikit-learn
-    - scikit-learn-intelex
     - pandas
     - jupyter
     - jupyterlab
-    - opencv-python==4.8.*
+    - opencv-python==4.9.*
     - scipy
     - pillow
     - xlrd
