--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -28,7 +28,7 @@ dependencies:
     - plotly
     - seaborn
     - seaborn-analyzer
-    - pandas
+    - pandas==1.3.6
     - jupyter
     - jupyterlab
     - opencv-python==4.9.*
