Update torchvision version to avoid a bug

--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -10,8 +10,8 @@ dependencies:
   - python=3.11.*
   - pylint
   - numpy
-  - pytorch=2.1.2
-  - torchvision
+  - pytorch=2.1.0
+  - torchvision=0.16.0
   - torchaudio
   - torchtext
   - torchdata
