--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -20,6 +20,7 @@ dependencies:
   - category_encoders
   - scikit-learn
   - scikit-learn-intelex
+  - pyarrow
   - pip
   - pip:
     - ipython
@@ -28,7 +29,7 @@ dependencies:
     - plotly
     - seaborn
     - seaborn-analyzer
-    - pandas==1.3.6
+    - pandas
     - jupyter
     - jupyterlab
     - opencv-python==4.9.*
