--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -7,11 +7,11 @@ channels:
   - pytorch
   - nvidia
 dependencies:
-  - python=3.10.13
+  - python=3.11.8
   - pylint
   - numpy
-  - pytorch=2.1.0
-  - torchvision=0.16.0
+  - pytorch=2.2.1
+  - torchvision
   - torchaudio
   - torchtext
   - torchdata
