--- a/windows-wsl/environment-pytorch.yml
+++ b/windows-wsl/environment-pytorch.yml
@@ -7,15 +7,15 @@ channels:
   - pytorch
   - nvidia
 dependencies:
-  - python=3.11.*
+  - python=3.12.7
   - pylint
   - numpy
-  - pytorch=1.13.*
-  - torchvision
+  - pytorch=2.5.*
+  - torchvision=0.20.*
   - torchaudio
   - torchtext
   - torchdata
-  - pytorch-cuda=11.7.*
+  - pytorch-cuda=12.4.*
   - category_encoders
   - pip
   - pip:
@@ -30,11 +30,11 @@ dependencies:
     - pandas
     - jupyter
     - jupyterlab
-    - opencv-python==4.8.*
+    - opencv-python==4.10.*
     - scipy
     - pillow
     - xlrd
-    - openpyxl==3.1.0
+    - openpyxl==3.1.5
     - defusedxml
     - lxml
     - html5lib
